dot-net-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnet-app
  labels:
    app: dotnet-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dotnet-app
  template:
    metadata:
      labels:
        app: dotnet-app
    spec:
      containers:
      - name: dotnet-app
        image: mcr.microsoft.com/dotnet/samples
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: dotnet-app
spec:
  type: NodePort
  selector:
    app: dotnet-app
  ports:
    - protocol: TCP
      port: 80
