ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: https-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - rajat.com
      secretName: https-secret

  rules:
    - host: rajat.com
      http:
        paths:
          - path: /
            backend:
              serviceName: nodejs-app
              servicePort: 80
          - path: /api
            backend:
              serviceName: dotnet-app
              servicePort: 80
